# esolangs-article

./: .gitattributes  Article.docx  CMakeLists.txt  LICENSE  README.md  ~$rticle.docx  ~WRL1150.tmp
Piet-interp/: CMakeLists.txt  color.c  color.h  command.c  command.h  imgreader.c  imgreader.h  interpreter.c  interpreter.h  log.c  log.h  main.c  piet.h  piet_cell.c  piet_cell.h  piet_color.c  piet_color.h  piet_common.h  piet_image.c  piet_image.h  piet_interpreter.c  piet_interpreter.h  piet_io.c  piet_io.h  piet_stack.c  piet_stack.h  piet_types.h  png_loader.c  png_loader.h  stack.c  stack.h  types.h
Whitespace-interp/: .gitignore  CMakeLists.txt  config.h  instruction.c  instruction.h  interpreter.c  interpreter.h  m_interpreter.c  main.c
Whitespace-interp/examples/: file.ws
benchmarks/: go.mod  main.go  resource_usage_unix.go  resource_usage_windows.go
